Fix. Fixed the alignment of the buttons and icons.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ nav
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 
 nav ul{
@@ -57,11 +58,13 @@ nav ul li button
 
 .test li{
     padding: 0 5px ;
+    /* margin-right: 2%; */
 }
 
 .nav-account-button
 {
     background-color: #efff30ff;
+    
 }
 
 main{
@@ -235,6 +238,7 @@ footer button
     background-color: #000000;
     font-size: 15px;
     padding:18px 15px;
+    margin-left: 0.5%;
 }
 
 .footer-button-FarmStartsAt-span
@@ -269,19 +273,52 @@ footer img
 .footer-button-DonotWait
 {
     background-color: rgb(255, 255, 124);
+    padding: 10px 15px;
+    position: relative;
+    left: 20%;
+    z-index: 0;
 }
 
 .footer-button-JoinUs
 {
     background-color: rgb(167, 121, 209);
+    padding: 10px 15px;
+    position: relative;
+    z-index: 1;
 }
 
 .footer-button-ActNow
 {
+    position: relative;
+    padding: 10px 15px;
+    z-index: 2;
+    left:-20%;
     background-color: blanchedalmond;
 }
 
 .footer-button-ContactTeam
 {
     background-color: #fff;
+}
+
+.footer-team-icon-1
+{
+    position:relative;
+    z-index: 2;
+    /* right: 20px; */
+    
+}
+
+.footer-team-icon-2
+{
+    position:relative;
+    z-index: 1;
+    right:20% ;
+}
+
+.footer-team-icon-3{
+    position: relative;
+    z-index: 0;
+    /* left: -90px; */
+    right: 40%;
 }
